--- a/css/flickity.css
+++ b/css/flickity.css
@@ -136,6 +136,7 @@ http://flickity.metafizzy.co
 }
 
 .flickity-page-dots .dot.is-selected {
+  background: white;
   filter: alpha(opacity=100); /* IE8 */
   opacity: 1;
 }
