--- a/css/flickity.css
+++ b/css/flickity.css
@@ -115,9 +115,9 @@ http://flickity.metafizzy.co
   width: 100%;
   bottom: -25px;
   padding: 0;
-  margin: 0;
+  margin-left: 40px;
   list-style: none;
-  text-align: center;
+  text-align: left;
   line-height: 1;
 }
 
