--- a/css/normalize-custom.css
+++ b/css/normalize-custom.css
@@ -4,7 +4,6 @@
 	    font: 16px/1 sans-serif;
 	    -moz-osx-font-smoothing: grayscale;
 	    -webkit-font-smoothing: antialiased;
-	    background: yellow;
 	}
 }
 @media only screen and (min-width: 871px) {
@@ -13,6 +12,6 @@
     font: 16px/1 sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    background: green;
+    background: #466BB0;
 	}
 }
