create more info page

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* --------- my macbook air screen ----- */
+@media (min-width: 500px) and (max-width: 1200px) {
+  }
+
 /*---------Other Screens---------------*/
 
   body {
