--- a/css/twitter.css
+++ b/css/twitter.css
@@ -1,8 +1,67 @@
-input[type="text"] {
-    width: 200px;
-    height: 20px;
-    padding-right: 50px;
+
+/* ---------------------------------------------------------------- */
+
+/* ------------STYLING FOR LANDING PAGE---------------------- */
+
+body{
+margin: 7%;
+margin-top: 20%;
+font: 16px/1 sans-serif;
+-moz-osx-font-smoothing: grayscale;
+-webkit-font-smoothing: antialiased;
+background: #0C1B31;
 }
+
+h1{
+    color: #55B0DF;
+    font-size: 50px;
+    font-weight: 400;
+}
+
+p{
+    color: white;
+
+}
+
+p.subtitle {
+    margin-top: -10px;
+    line-height: 150%;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+
+
+input[type="text"] {
+    width: 230px;
+    height: 45px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 50px;
+    background: none;
+    font-size: 20px;
+    border-width: 2px;
+}
+
+input[type="submit"]{
+    margin-left: 12px;
+    position: absolute;
+    background-color: #29B9E9; 
+    border: none;
+    color: white;
+    padding: 20px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+
+}
+
+#handle{
+    margin-top: 25%;
+}
+/*
 
 input[type="submit"] {
 	background: url("arrow.png") no-repeat 0 0 transparent;
@@ -13,5 +72,5 @@ input[type="submit"] {
   
    /* color: blue;*/
     border: none;
-    -webkit-appearance: none;
+    -webkit-appearance: none;*/
 }
