--- a/css/twitter.css
+++ b/css/twitter.css
@@ -2,14 +2,38 @@
 /* ---------------------------------------------------------------- */
 
 /* ------------STYLING FOR LANDING PAGE---------------------- */
+header {
+  background: none;
+      width: 100%;
+      height: 50px;
+      margin-top: -200px;
+      position: absolute;
+      z-index: 10000;
+}
+
+.ibm {
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.adobe {
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+
 
 body{
-margin: 7%;
-margin-top: 20%;
+
 font: 16px/1 sans-serif;
 -moz-osx-font-smoothing: grayscale;
 -webkit-font-smoothing: antialiased;
 background: #0C1B31;
+}
+
+#landingpage {
+    margin: 7%;
+    margin-top: 20%;
 }
 
 h1{
@@ -41,7 +65,7 @@ input[type="text"] {
     padding-right: 50px;
     background: none;
     font-size: 20px;
-    border-width: 2px;
+    border-width: 1px;
 }
 
 input[type="submit"]{
@@ -74,3 +98,10 @@ input[type="submit"] {
     border: none;
     -webkit-appearance: none;*/
 }
+
+
+
+
+
+
+
