--- a/css/twitter.css
+++ b/css/twitter.css
@@ -6,19 +6,23 @@ header {
   background: none;
       width: 100%;
       height: 50px;
-      margin-top: -200px;
+      margin-top: -190px;
       position: absolute;
       z-index: 10000;
 }
-
-.ibm {
+.back {
   margin-top: 10px;
   margin-left: 20px;
 }
 
+.ibm {
+  margin-top: 10px;
+  margin-left: 30px;
+}
+
 .adobe {
   margin-top: 10px;
-  margin-right: 20px;
+  margin-right: 35px;
 }
 
 
