--- a/css/twitter.css
+++ b/css/twitter.css
@@ -70,6 +70,7 @@ input[type="text"] {
     background: none;
     font-size: 20px;
     border-width: 1px;
+    color: white;
 }
 
 input[type="submit"]{
