--- a/css/words.css
+++ b/css/words.css
@@ -1,3 +1,36 @@
+  body {
+    margin: 0;
+    font: 16px/1 sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+
+  }
+
+/*--- Header Styling------------ */
+header {
+  background: #466BB0;
+      width: 100%;
+      height: 50px;
+      position: absolute;
+      z-index: 10000;
+}
+
+.back {
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.ibm {
+  margin-top: 10px;
+  margin-left: 30px;
+}
+
+.adobe {
+  margin-top: 10px;
+  margin-right: 35px;
+}
+
+
 h1{
 	
 	font-size:32px;
@@ -58,7 +91,7 @@ h3{
 	position:relative;
 	left:60px;
 	top:20px;
-	margin:0px;
+	margin-top:60px;
 	/*background-color:lightgray; */
 	overflow:hidden;
 }
