--- a/css/words.css
+++ b/css/words.css
@@ -8,25 +8,25 @@
 
 /*--- Header Styling------------ */
 header {
-  background: #466BB0;
+  background: #0C1B31;
       width: 100%;
-      height: 50px;
+      height: 60px;
       position: absolute;
       z-index: 10000;
 }
 
 .back {
-  margin-top: 10px;
+  margin-top: 15px;
   margin-left: 20px;
 }
 
 .ibm {
-  margin-top: 10px;
+  margin-top: 15px;
   margin-left: 30px;
 }
 
 .adobe {
-  margin-top: 10px;
+  margin-top: 15px;
   margin-right: 35px;
 }
 
