--- a/css/words.css
+++ b/css/words.css
@@ -51,7 +51,7 @@ h3{
 }
 
 .profile-info-container {
-	height:200px;
+	height:150px;
 	width:600px;
 	border:1px;
 	display:inline-block;
@@ -96,9 +96,28 @@ h3{
 }
 
 .details-container{
-	height:250px;
+	height:300px;
 	width:841px;
 	position:relative;
 	left:60px;
 	background-color:lightgray;
 }
+
+.summary{
+	width:420px;
+	line-height:120%;
+	display:inline-block
+}
+
+.image-grid{
+	width:400px;
+	height:auto;
+	display:inline-block
+}
+
+.image-grid img{
+	width:150px;
+	height:auto;
+	margin-left:50px;
+}
+
