--- a/css/results.css
+++ b/css/results.css
@@ -156,3 +156,16 @@ h3{
 	margin-left:50px;
 }
 
+.pic {
+	max-width: 200px;
+}
+
+td {
+   padding:0; 
+   margin:0;
+   background: yellow;
+}
+
+tr {
+	background: red;
+}
