--- a/css/results.css
+++ b/css/results.css
@@ -156,16 +156,29 @@ h3{
 	margin-left:50px;
 }
 
+tr {
+	background: red;
+}
+
 .pic {
 	max-width: 200px;
 }
 
-td {
-   padding:0; 
-   margin:0;
-   background: yellow;
+.more_details{
+	max-width: 95%;
+	margin-left: 0%;
 }
 
-tr {
-	background: red;
+
+.left_column{
+	max-width: 600px;
+	padding: 20px 80px 20px 80px;
+	line-height: 150%;
+	font-size: 18px;
+	font-weight: 300;
+	overflow: hidden;
+	background-color: yellow;
 }
+
+
+
