--- a/css/results.css
+++ b/css/results.css
@@ -59,6 +59,36 @@ h3{
 	margin-top:10px;
 }
 
+/* --- Styling for the form ------ */
+
+input[type="text"] {
+    width: 230px;
+    height: 45px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 50px;
+    background: none;
+    font-size: 20px;
+    border-width: 2px;
+    color: black;
+    border-color: black;
+}
+
+input[type="submit"]{
+    margin-left: 12px;
+    position: absolute;
+    background-color: #29B9E9; 
+    border: none;
+    color: white;
+    padding: 21px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+
+}
+
 #whatisnumber {
 	 bottom:7%;
 	 right: 60px;
@@ -92,8 +122,8 @@ h3{
 #line{
 	display:inline-block;
 	font-size:115px;
-	margin-top:5px;
-	margien-left:30px;
+	margin-top:-100px;
+	margin-left:20px;
 	float:right;
 	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight:100;
@@ -159,4 +189,23 @@ tbody {
 .chart2{
 	margin-top: -20px;
 }
+
+.block1{
+/*	background-color: blue;*/
+	padding-left: 90px;
+	width:50%;
+	font-size: 20px;
+}
+
+.block2{
+/*	background-color: green;*/
+	padding-left: 35px;
+	width: 50%;
+}
+
+.email_form{
+	padding-top: 25px;
+}
+
+
 
